--- a/src/components/TodaysForecast/styles.module.css
+++ b/src/components/TodaysForecast/styles.module.css
@@ -3,7 +3,6 @@
   flex-direction: column;
   row-gap: 2rem;
   width: 100%;
-  height: 100%;
   grid-area: todaysWeather;
   padding: 2rem;
   background-color: var(--bg-gray);
@@ -27,6 +26,7 @@
   align-items: center;
   width: 100%;
   height: 100%;
+  padding: 0 2rem;
 }
 
 .card:not(:last-child) {
@@ -36,7 +36,7 @@
 
 .card > img {
   aspect-ratio: 1;
-  width: 6rem;
+  max-width: 100%;
 }
 
 .card > p:first-child {
