feat: add sevenday forecast component

--- a/src/components/TodaysForecast/styles.module.css
+++ b/src/components/TodaysForecast/styles.module.css
@@ -30,7 +30,7 @@
 }
 
 .card:not(:last-child) {
-  border-right: 1px solid rgb(221, 224, 228);
+  border-right: 1px solid var(--border);
   border-radius: 2px;
 }
 
