--- a/src/components/AirConditions/styles.module.css
+++ b/src/components/AirConditions/styles.module.css
@@ -1,12 +1,25 @@
 .container {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  width: 100%;
+  display: flex;
+  flex-direction: column;
   height: 100%;
+  width: 100%;
+  row-gap: 1rem;
   grid-area: airConditions;
   background-color: var(--bg-gray);
   border-radius: var(--rounded-lg);
   padding: 2rem;
+}
+
+.container > p {
+  color: var(--muted-text);
+  font-weight: 500;
+  text-transform: uppercase;
+}
+
+.cardWrapper {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 2rem;
 }
 
 .infoCard {
