style: search input style

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -26,8 +26,7 @@ body,
 .main {
   display: flex;
   flex-direction: column;
-  row-gap: 1rem;
-  padding: 2rem;
+  padding: 1rem 2rem;
 }
 
 .app {
@@ -40,11 +39,6 @@ body,
   grid-template-rows: repeat(3, 1fr);
   gap: 1rem;
   height: 100%;
-}
-
-.searchInput {
-  height: 3.75rem;
-  width: 66%;
 }
 
 .title-xl {
