--- a/src/components/MainWeather/styles.module.css
+++ b/src/components/MainWeather/styles.module.css
@@ -14,5 +14,8 @@
 
 .imageContainer {
   aspect-ratio: 1;
-  height: 100%;
+  font-size: 10rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
