--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -33,8 +33,8 @@ body,
   display: grid;
   grid-template-areas:
     "mainWeather mainWeather weeklyWeather"
-    "todaysWeather todaysWeather weeklyWeather"
-    "airConditions airConditions weeklyWeather";
+    "airConditions airConditions weeklyWeather"
+    "bos bos weeklyWeather";
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(3, 1fr);
   gap: 1rem;
